fix: Display of extensions list to not overflow the container

--- a/packages/seed-bible/seed-bible/app/main.css
+++ b/packages/seed-bible/seed-bible/app/main.css
@@ -2819,7 +2819,6 @@ h6 {
   font-size: 12px;
   opacity: 0.78;
   line-height: 1.25;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
